Add all in getAllUser